

public interface Adjustable {
    void resize(double factor);  // تغيير الحجم
    double getSize();            // الحصول على الحجم (مثل الشعاع)
}
