

public interface Movable {
    void move(double dx, double dy);  // تحريك النقطة
    Point getPosition();              // الحصول على الموقع
}
